fuel-indexer-tests/macro-data/fail_if_attribute_abi_arg_includes_invalid_type.stderr
error: Type Ident { ident: "BadType", span: #0 bytes(356..363) } not defined in the ABI.
  --> $WORKSPACE/fuel-indexer-tests/macro-data/fail_if_attribute_abi_arg_includes_invalid_type.rs
   |
   | / #[indexer(
   | |     abi = "./../examples/simple-wasm/contracts/out/debug/contracts-abi.json",
   | |     namespace = "test_namespace",
   | |     identifier = "index2",
   | |     schema = "./../examples/simple-wasm/schema/schema.graphql",
   | | )]
   | |__^
   |
   = note: this error originates in the attribute macro `indexer` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0433]: failed to resolve: use of undeclared type `Receipt`
<<<<<<< HEAD:fuel-indexer-tests/macro-data/fail_if_attribute_abi_arg_includes_invalid_type.stderr
  --> $WORKSPACE/fuel-indexer-tests/macro-data/fail_if_attribute_abi_arg_includes_invalid_type.rs
   |
   |                     Receipt::Call {
   |                     ^^^^^^^ use of undeclared type `Receipt`

error[E0433]: failed to resolve: use of undeclared type `Receipt`
  --> $WORKSPACE/fuel-indexer-tests/macro-data/fail_if_attribute_abi_arg_includes_invalid_type.rs
   |
   |                     Receipt::ReturnData {
=======
  --> test_data/fail_unknown_type.rs:41:21
   |
41 |                     Receipt::Call {
   |                     ^^^^^^^ use of undeclared type `Receipt`

error[E0433]: failed to resolve: use of undeclared type `Receipt`
  --> test_data/fail_unknown_type.rs:52:21
   |
52 |                     Receipt::ReturnData {
>>>>>>> 74f30fb3abf9709c74dd07d1cede44930077bc78:fuel-indexer-macros/test_data/fail_unknown_type.stderr
   |                     ^^^^^^^ use of undeclared type `Receipt`

error[E0422]: cannot find struct, variant or union type `SomeEvent` in this scope
  --> $WORKSPACE/fuel-indexer-tests/macro-data/fail_if_attribute_abi_arg_includes_invalid_type.rs
   |
   |     let s = SomeEvent {
   |             ^^^^^^^^^ not found in this scope

error[E0412]: cannot find type `BlockData` in this scope
  --> $WORKSPACE/fuel-indexer-tests/macro-data/fail_if_attribute_abi_arg_includes_invalid_type.rs
   |
   |     let data: Vec<BlockData> = vec![
   |                   ^^^^^^^^^ not found in this scope
   |
help: consider importing one of these items
   |
2  | use fuel_indexer_plugin::types::BlockData;
   |
2  | use fuel_indexer_schema::BlockData;
   |

error[E0422]: cannot find struct, variant or union type `BlockData` in this scope
  --> $WORKSPACE/fuel-indexer-tests/macro-data/fail_if_attribute_abi_arg_includes_invalid_type.rs
   |
   |         BlockData {
   |         ^^^^^^^^^ not found in this scope
   |
help: consider importing one of these items
   |
2  | use fuel_indexer_plugin::types::BlockData;
   |
2  | use fuel_indexer_schema::BlockData;
   |

error[E0425]: cannot find function `serialize` in this scope
<<<<<<< HEAD:fuel-indexer-tests/macro-data/fail_if_attribute_abi_arg_includes_invalid_type.stderr
  --> $WORKSPACE/fuel-indexer-tests/macro-data/fail_if_attribute_abi_arg_includes_invalid_type.rs
   |
   |     let mut bytes = serialize(&data);
=======
  --> test_data/fail_unknown_type.rs:66:21
   |
66 |     let mut bytes = serialize(&data);
>>>>>>> 74f30fb3abf9709c74dd07d1cede44930077bc78:fuel-indexer-macros/test_data/fail_unknown_type.stderr
   |                     ^^^^^^^^^ not found in this scope
   |
help: consider importing one of these items
   |
2  | use fuel_indexer_plugin::types::serialize;
   |
2  | use fuel_indexer_schema::serialize;
   |
2  | use fuels::node::chain_config::serialization::serde_hex::serialize;
   |

error[E0425]: cannot find function `handle_events` in this scope
<<<<<<< HEAD:fuel-indexer-tests/macro-data/fail_if_attribute_abi_arg_includes_invalid_type.stderr
  --> $WORKSPACE/fuel-indexer-tests/macro-data/fail_if_attribute_abi_arg_includes_invalid_type.rs
   |
   |     handle_events(ptr, len);
=======
  --> test_data/fail_unknown_type.rs:71:5
   |
71 |     handle_events(ptr, len);
>>>>>>> 74f30fb3abf9709c74dd07d1cede44930077bc78:fuel-indexer-macros/test_data/fail_unknown_type.stderr
   |     ^^^^^^^^^^^^^ not found in this scope

error: unused import: `Tokenizable`
  --> $WORKSPACE/fuel-indexer-tests/macro-data/fail_if_attribute_abi_arg_includes_invalid_type.rs
   |
   |     use fuels_core::{abi_encoder::ABIEncoder, Tokenizable};
   |                                               ^^^^^^^^^^^
   |
   = note: `-D unused-imports` implied by `-D warnings`
